# simple-generation

./: .readthedocs.yaml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: stale.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  reference.rst  requirements.txt  usage.rst
examples/: engine_vllm.py  gui.py  inference.py  llama2_template.py  multi_request_conversation.py  multi_turn.py  sorting.py  translation.py  translation_gui.py  vlm.py  whisper_transcription.py
examples/vlm/: vlm.py
simple_generation/: __init__.py  cli.py  conversation.py  gui.py  simple_generation.py  utils.py
simple_generation/speech/: __init__.py  config.py  transcriber.py
simple_generation/vlm/: __init__.py  config.py  utils.py  vlm.py
tests/: __init__.py  test_simple_generation.py
